Add indent to column list